--- a/jsonrpc.html
+++ b/jsonrpc.html
@@ -4,14 +4,16 @@
    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
    <title>JSON-RPC for MooTools</title>
    <style type="text/css">
+   .sample{margin-top:20px;padding:10px;width:700px;border:none;-webkit-box-shadow:0px 0px 20px rgba(33,123,232,.8);-moz-box-shadow:0px 0px 20px rgba(33,123,232,.8)}
    </style>
    <script src="http://www.google.com/jsapi?key=ABQIAAAA1XbMiDxx_BTCY2_FkPh06RRaGTYH6UMl8mADNa0YKuWNNa8VNxQEerTAUcfkyrr6OwBovxn7TDAH5Q"></script>
    <script type="text/javascript">google.load("mootools", "1.3");</script>
-   <script type="text/javascript" src="jsonrpc.js"></script>
+   <script type="text/javascript" src="jsonrpc-yui-compressed.js"></script>
    <script type="text/javascript">
      window.addEvent('domready',function(){
          var req = new JSONRPC({
-             url: 'http://localhost/php-hacks/json-rpc-php/server.php',
+             url: 'http://thinkphp.ro/apps/php-hacks/json-rpc-php/server.php', 
+             /*url: 'http://localhost/php-hacks/json-rpc-php/server.php',*/
              methodname: 'getTweets'
          });
          req.send({params: ['codepo8',10,true],
@@ -27,6 +29,31 @@
   </script>
 </head>
 <body>
+<h1>Plugin MooTools Client for <a href="http://json-rpc.org/wiki/specification">JSON-RPC</a> protocol</h1>
+<h2>Overview</h2>
+JSON-RPC is a lightweight remote procedure call protocol. It's designed to be simple! The general mechanism consists of two peers establishing a data connection. During the lifetime of a connection, peers may invoke methods provided by  the other peer. To invoke a remote method, a request is sent. Unless the request is a notification it must be replied to with a response.
+<h2>Communication</h2>
+<div class="sample">Data sent to service - request JSON-RPC : {"method":"getTweets","params":["codepo8",10,true],"id":"ghhgxqq8"}</div>
+<div class="sample">Data coming from service - response JSON-RPC : {"error":"null","id":"ghhgxqq8","result":"the_result_from_server"}</div>
 <div id="result"></div>
+<pre>
+     #JS
+     window.addEvent('domready',function(){
+         var req = new JSONRPC({
+             url: 'http://thinkphp.ro/apps/php-hacks/json-rpc-php/server.php', 
+             methodname: 'getTweets'
+         });
+         req.send({params: ['codepo8',10,true],
+                  onSuccess: function(resp){
+                     if(window.console) {console.log(resp);}
+                     $('result').set('html', resp.result);
+                  },
+                  onRemoteFailure: function(resp) {
+                       if(window.console) {console.log(resp.error);}
+                  }
+         });  
+     });
+</pre>
+<div id="ft"><p>@<a href="http://twitter.com/thinkphp">thinkphp</a> | donwload on <a href="https://github.com/thinkphp/JSON-RPC-MooTools">GitHub</a></p></div>
 </body>
 </html>
