--- a/jsonrpc.html
+++ b/jsonrpc.html
@@ -2,7 +2,7 @@
 <html>
 <head>
    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
-   <title>JSON-RPC for MooTools</title>
+   <title>JSON-RPC protocol for MooTools</title>
    <style type="text/css">
    html,body{font-family: georgia,arial,verdana;}
    .sample{margin-top:20px;padding:10px;width:700px;border:none;-webkit-box-shadow:0px 0px 20px rgba(33,123,232,.8);-moz-box-shadow:0px 0px 20px rgba(33,123,232,.8)}
@@ -41,7 +41,7 @@
   </script>
 </head>
 <body>
-<h1>Plugin MooTools Client for <a href="http://json-rpc.org/wiki/specification">JSON-RPC</a> protocol</h1>
+<h1>Implementation of the <a href="http://json-rpc.org/wiki/specification">JSON-RPC</a> protocol in MooTools</h1>
 <h2>Overview</h2>
 JSON-RPC is a lightweight remote procedure call protocol. It's designed to be simple! The general mechanism consists of two peers establishing a data connection. During the lifetime of a connection, peers may invoke methods provided by  the other peer. To invoke a remote method, a request is sent. Unless the request is a notification it must be replied to with a response.
 <h2>Communication</h2>
